ajouter le style de section 1

--- a/index1.html
+++ b/index1.html
@@ -50,27 +50,27 @@
             <div class="hleft"></div>
             <div class="hright">
                 <h2 class="htitle3">ABOUT <span>US</span></h2>
-                <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                <p class="para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
             </div>
         </div>
     </section1>
     <section2 class="hsec2">
         <h2 class="htitle4">NOS SERVICES</h2>
-        <p class="p2"> NOTRE EXPERTISE A VOTRE SERVICES</p>
-        <form class="hmoraba3">
+        <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
+        <d class="grid2">
             <div class="hone">
-                <p class="p3">CREATION DU SITE INTERNET</p>
+                <p class="para">CREATION DU SITE INTERNET</p>
             </div>
             <div class="htwo">
-                <p class="p3">DIGITAL MARKETING</p>
+                <p class="para">DIGITAL MARKETING</p>
             </div>
             <div class="htree">
-                <p class="p3">DESIGN DE MARQUE</p>
+                <p class="para">DESIGN DE MARQUE</p>
             </div>
             <div class="hfour">
-                <p class="p3">PRODUCTION DES PROJETS</p>
+                <p class="para">PRODUCTION DES PROJETS</p>
             </div>
-        </form>
+            </form>
     </section2>
     <section3 class="hsec3">
         <div class="hgrid4">
