add client section

--- a/team and client/index.html
+++ b/team and client/index.html
@@ -21,8 +21,9 @@
 
 
         <div class="abg"></div>
-
-        <h1>Notre Equipe</h1>
+        <div class="title">
+            <h1>Notre Equipe</h1>
+        </div>
         <div class="para">
             <p>Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et de chanteurs de théâtre. Nous
                 abordons le travail et jouons avec curiosité et expérimentation, en utilisant ce que nous apprenons
@@ -34,12 +35,12 @@
 
     </div>
 
-    <!-- ------------------------------------end header area ---------------------------------------->
+    <!-- ------------------------------------end header area ------------------------------------->
 
 
 
 
-    <!-- -----------------------------------start first section ------------------------------------->
+    <!-- -----------------------------------start first section ---------------------------------->
     <section>
 
 
@@ -117,13 +118,75 @@
 
 
     </section>
-    <!------------------------------------- end first section ------------------------------------->
+    <!------------------------------------- end first section ---------------------------------->
 
 
 
 
-    <!------------------------------------- start second section ---------------------------------->
+    <!----------------------------------- start second section ------------------------------->
     <section>
+
+
+        <div class="title1">
+            <h1>Notre Clients</h1>
+        </div>
+
+        <div class="clients1">
+
+
+            <div class="client">
+                <i class="fab fa-amazon"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-paypal"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-apple"></i>
+
+            </div>
+
+            <div class="client">
+                <i class="fab fa-fedex"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-imdb"></i>
+
+            </div>
+
+        </div>
+
+        <div class="clients2">
+
+
+            <div class="client">
+                <i class="fab fa-twitch"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-youtube"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-spotify"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-bootstrap"></i>
+            </div>
+
+            <div class="client">
+                <i class="fab fa-github"></i>
+            </div>
+
+        </div>
+
+
+
+        </div>
+
         <br>
         <br>
         <br>
@@ -132,12 +195,7 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
 
 
     </section>
