last commit pour le deuxieme jour

--- a/index1.html
+++ b/index1.html
@@ -55,25 +55,25 @@
         </div>
     </section1>
     <section2 class="hsec2">
-        <h2 class="htitle4">NOS SERVICES</h2>
+        <h2 class="htitle4"><span>NOS</span> SERVICES</h2>
         <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
-        <d class="grid2">
+        <div class="hgrid">
             <div class="hone">
-                <p class="para">CREATION DU SITE INTERNET</p>
+                <p>CREATION DU SITE INTERNET</p>
             </div>
             <div class="htwo">
-                <p class="para">DIGITAL MARKETING</p>
+                <p>DIGITAL MARKETING</p>
             </div>
             <div class="htree">
-                <p class="para">DESIGN DE MARQUE</p>
+                <p>DESIGN DE MARQUE</p>
             </div>
             <div class="hfour">
-                <p class="para">PRODUCTION DES PROJETS</p>
+                <p>PRODUCTION DES PROJETS</p>
             </div>
-            </form>
+        </div>
     </section2>
     <section3 class="hsec3">
-        <div class="hgrid4">
+        <div class="hgrid">
             <div class="hleft1"><img src="/Images/img-4.png" alt="Misbah"></div>
             <div class="hright1">
                 <h2 class="htitle5">Vous avez un projet ?</h2>
