--- a/team and client/index.html
+++ b/team and client/index.html
@@ -187,20 +187,20 @@
 
         </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-
 
     </section>
+    <!----------------------------------- end second section ------------------------------->
+
+    <footer>
 
 
+        <div>
+
+
+        </div>
+
+
+    </footer>
 
 </body>
 
