--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -18,6 +18,7 @@
        </div>  
     </div>
       <!---------------------------premier_lign----------------------------------->
+<div class="fixed" >   
  <div class="aorg">
 
 
@@ -91,7 +92,7 @@
 
      <div class="apaaart1">
           <h1>105</h1>
-          <h2>project</h2>
+          <h2>projects</h2>
           <p>Avec plus de dix ans de connaissances et d’expertise,
             nous concevons et codons des sites Web et
             des applications propres, nous construisons 
@@ -100,7 +101,7 @@
 
      <div class="apaaart2">
           <h2>NOTRE MÉTIER</h2>  
-          <h2>PLUS DE 8 ANNÉES D’EXPÉRIENCE</h2>
+          <h1>PLUS DE 8 ANNÉES D’EXPÉRIENCE</h1><hr>
           <p>Notre Agence digitale offre un bassin de ressources,
             d’expertise et de solutions adaptées à la créativité
             artistique. Nous offrons des conceptions de site web,
@@ -113,10 +114,10 @@
             dans le domaine des recommandations.</p>
      </div>
 
-     <div class="apaaaart3">
-          <h1>voir notre projets</h1>
+     <div class="apaaart3">
+          <h1>voir notre <a href="#">projets</a></h1><hr>
      </div>
 </div>
-
+</div>  
   </body>
 </html>
