commit pour lasection trois

--- a/index1.html
+++ b/index1.html
@@ -59,28 +59,39 @@
         <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
         <div class="hgrid">
             <div class="hone">
+
                 <p>CREATION DU SITE INTERNET</p>
             </div>
+
             <div class="htwo">
+
                 <p>DIGITAL MARKETING</p>
             </div>
             <div class="htree">
+
                 <p>DESIGN DE MARQUE</p>
             </div>
             <div class="hfour">
+
                 <p>PRODUCTION DES PROJETS</p>
             </div>
         </div>
     </section2>
     <section3 class="hsec3">
-        <div class="hgrid">
-            <div class="hleft1"><img src="/Images/img-4.png" alt="Misbah"></div>
-            <div class="hright1">
+        <div class="hfather">
+            <div class="hchild1">
                 <h2 class="htitle5">Vous avez un projet ?</h2>
                 <p class="p4">
                     Vous recherchez une agence web créative, sérieuse et experte compétente pour développer votre productivité, activité et visibilité?
                 </p>
                 <button class="hbtn">Faison connaisance</button>
+                <div class="child2">
+                    <div class="SEPAR">
+                        <span>i</span>
+                        <h1>Hey</h1>
+                        <p>This is an informative card that will tell you something that's... well, important!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section3>
