troisième update de l index

--- a/index1.html
+++ b/index1.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+
+
+
     <header class="hhead">
-
-
         <div class="fixe">
             <img src="/Images/Logo2.png" alt="logo" class="hlogo">
             <nav>
@@ -45,6 +46,9 @@
             <button class="hbtn"> SUBSCRIBE</button>
         </div>
     </header>
+
+
+
     <section1 class="hsec1">
         <div class="hgrid">
             <div class="hleft"></div>
@@ -55,28 +59,34 @@
         </div>
     </section1>
     <section2 class="hsec2">
-        <h2 class="htitle4"><span>NOS</span> SERVICES</h2>
-        <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
-        <div class="hgrid">
-            <div class="hone">
+        <div class="hcont">
+            <h2 class="htitle4"><span>NOS</span> SERVICES</h2>
+            <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
 
-                <p>CREATION DU SITE INTERNET</p>
-            </div>
+            <div class="hgrid">
+                <div class="hone">
 
-            <div class="htwo">
+                    <p>CREATION DU SITE INTERNET</p>
+                </div>
 
-                <p>DIGITAL MARKETING</p>
-            </div>
-            <div class="htree">
+                <div class="htwo">
 
-                <p>DESIGN DE MARQUE</p>
-            </div>
-            <div class="hfour">
+                    <p>DIGITAL MARKETING</p>
+                </div>
+                <div class="htree">
 
-                <p>PRODUCTION DES PROJETS</p>
+                    <p>DESIGN DE MARQUE</p>
+                </div>
+                <div class="hfour">
+
+                    <p>PRODUCTION DES PROJETS</p>
+                </div>
             </div>
         </div>
     </section2>
+
+
+
     <section3 class="hsec3">
         <div class="hfather">
             <div class="hchild1">
@@ -95,13 +105,30 @@
             </div>
         </div>
     </section3>
+
+
+
     <section4 class="hsec4">
         <div class="hgrid3">
             <p>DE LA STRATÉGIE AU DÉVELOPPEMENT WEB, NOUS REGROUPONS TOUTE LA CHAINE DE VALEUR DU NUMÉRIQUE. NOTRE TALENT EST À VOTRE DISPOSITION POUR VOUS ACCOMPAGNER DANS L’UNIVERS DIGITAL</p>
             <button class="hbtn ">CONTACTEZ NOUS</button>
         </div>
     </section4>
-    <footer></footer>
+
+
+
+    <section5 class="hsec5">
+        <div class="slider">
+            <div class="slides">
+                <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg" alt="slide"></div>
+                <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg" alt="slide"></div>
+                <div class="slide"><img src="/Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide"></div>
+            </div>
+        </div>
+    </section5>
+
+
+
 </body>
 
 </html>
