--- a/team and client/index.html
+++ b/team and client/index.html
@@ -186,6 +186,13 @@
 
 
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
 
 
     </section>
@@ -194,7 +201,38 @@
     <footer>
 
 
-        <div>
+        <div class="projet">
+            <div>
+                <h3>Lancer un projet</h3>
+            </div>
+            <div>
+                <i class="fas fa-arrow-right"></i>
+            </div>
+        </div>
+
+        <div class="footer-content ">
+            <div class=" contact flaot">
+                <h4>contact@webagency.com.ma</h4>
+                <h4>+121 34 67 83 79</h4>
+            </div>
+
+
+            <div class="form  flaot">
+                <form>
+                    <input class="text-input" type=" text" placeholder="votre email,votre message">
+                    <br>
+                    <input class="submit-input" type="submit" value="envoyer">
+                </form>
+            </div>
+
+            <div class="footer-icon flaot">
+                <ul class=" icon">
+                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+            </div>
 
 
         </div>
