finition de desktop

--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +22,7 @@
 
 
       <div class="apart1">
-            <h2>BONJOUR A TOUS</h2>
+            <h2 class="hov">BONJOUR A TOUS</h2>
             <h1>VOTRE<br> PARTENAIRE <br>DIGITAL </h1><hr class="hr">
             <P> <em>Nous sommes une Agence   
             digitale,nous aidons nos clients
@@ -48,7 +47,7 @@
             des prestations uniques, destinées
             à servir les projets Internet
             et graphiques les plus ambitieux..</em></p>
-          <button class=butt>CONTACTEZ-NOUS</button>   
+          <button class="butt">CONTACTEZ-NOUS</button>   
       </div>
  </div>
       <!-------------------------------------douxieme_lign---------------------------------------------->
@@ -115,7 +114,7 @@
      </div>
 
      <div class="apaaart3">
-          <h1>voir notre <a href="#">projets</a></h1><hr>
+          <h1>voir notre <a class="hov" href="#">projets</a></h1><hr>
      </div>
 </div>
 </div>  
