start on tablette version

--- a/team and client/index.html
+++ b/team and client/index.html
@@ -237,6 +237,11 @@
 
         </div>
 
+        <div class="copy">
+            <h6> &copy; 2020 web agency </h6>
+
+        </div>
+
 
     </footer>
 
