--- a/team and client/index.html
+++ b/team and client/index.html
@@ -16,24 +16,25 @@
 
     <!-- -----------------------------  start header area------------------------------------ -->
 
+    <header>
+        <div class="header">
 
-    <div class="header">
+
+            <div class="abg"></div>
+            <div class="title">
+                <h1>Notre Equipe</h1>
+            </div>
+            <div class="para">
+                <p>Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et de chanteurs de théâtre. Nous
+                    abordons le travail et jouons avec curiosité et expérimentation, en utilisant ce que nous apprenons
+                    pour
+                    créer des produits numériques significatifs qui se connectent avec les gens, tout comme vous.</p>
+
+            </div>
 
 
-        <div class="abg"></div>
-        <div class="title">
-            <h1>Notre Equipe</h1>
         </div>
-        <div class="para">
-            <p>Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et de chanteurs de théâtre. Nous
-                abordons le travail et jouons avec curiosité et expérimentation, en utilisant ce que nous apprenons
-                pour
-                créer des produits numériques significatifs qui se connectent avec les gens, tout comme vous.</p>
-
-        </div>
-
-
-    </div>
+    </header>
 
     <!-- ------------------------------------end header area ------------------------------------->
 
