STYLISATION DE PARTIE DU SLIDE

--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
                         <a href="#">A PROPOS</a>
                     </li>
                     <li>
-                        <a href="#">NOS SERVICES</a>
+                        <a href="#hgrid">NOS SERVICES</a>
                     </li>
                     <li>
                         <a href="#">PRICING</a>
@@ -63,7 +63,7 @@
             <h2 class="htitle4"><span>NOS</span> SERVICES</h2>
             <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
 
-            <div class="hgrid">
+            <div class="hgrid" id="hgrid">
                 <div class="hone">
 
                     <p>CREATION DU SITE INTERNET</p>
@@ -97,7 +97,7 @@
                 <button class="hbtn">Faison connaisance</button>
                 <div class="child2">
                     <div class="SEPAR">
-                        <span>i</span>
+                        <span><i class="fas fa-award" ></i></span>
                         <h1>Hey</h1>
                         <p>This is an informative card that will tell you something that's... well, important!</p>
                     </div>
@@ -118,11 +118,15 @@
 
 
     <section5 class="hsec5">
-        <div class="slider">
-            <div class="slides">
-                <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg" alt="slide"></div>
-                <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg" alt="slide"></div>
-                <div class="slide"><img src="/Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide"></div>
+        <div class="hcont">
+            <p class="para">QUELQUES <span>REALISATIONS</span> DE L’AGENCE</p>
+            <div class="abg"></div>
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide"><img src="/Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide"></div>
+                    <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg" alt="slide"></div>
+                    <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg" alt="slide"></div>
+                </div>
             </div>
         </div>
     </section5>
