--- a/team and client/index.html
+++ b/team and client/index.html
@@ -81,7 +81,7 @@
 
             </div>
 
-            <div class="team">
+            <div class="team team3">
                 <img src="images/Team-memeber-3.png" alt="Team-memeber-3">
                 <h2>Matt Boddy</h2>
                 <h3>Web Developer</h3>
@@ -98,7 +98,7 @@
                 </ul>
             </div>
 
-            <div class="team">
+            <div class="team team4">
 
                 <img src="images/team-member-.jpg" alt="team-member-4">
                 <h2>Kristy Ford</h2>
@@ -132,6 +132,7 @@
             <h1>Notre Clients</h1>
         </div>
 
+
         <div class="clients1">
 
 
@@ -152,7 +153,7 @@
                 <i class="fab fa-fedex"></i>
             </div>
 
-            <div class="client">
+            <div class="client none">
                 <i class="fab fa-imdb"></i>
 
             </div>
@@ -178,15 +179,15 @@
                 <i class="fab fa-bootstrap"></i>
             </div>
 
-            <div class="client">
+            <div class="client none">
                 <i class="fab fa-github"></i>
             </div>
 
+
+
         </div>
 
 
-
-        </div>
         <br>
         <br>
         <br>
