Finalisation de 1éré version (DESKTOP)

--- a/index1.html
+++ b/index1.html
@@ -133,6 +133,60 @@
 
 
 
+    <footer>
+
+
+        <div class="projet">
+            <div>
+                <h3>Lancer un projet</h3>
+            </div>
+            <div>
+                <i class="fas fa-arrow-right"></i>
+            </div>
+        </div>
+
+        <div class="footer-content ">
+            <div class=" contact flaot">
+                <h4>contact@webagency.com.ma</h4>
+                <h4>+121 34 67 83 79</h4>
+            </div>
+
+
+            <div class="form  flaot">
+                <form>
+                    <input class="text-input" type=" text" placeholder="votre email,votre message">
+                    <br>
+                    <input class="submit-input" type="submit" value="envoyer">
+                </form>
+            </div>
+
+            <div class="footer-icon flaot">
+                <ul class=" icon">
+                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a>
+                    </li>
+                </ul>
+            </div>
+
+
+        </div>
+
+        <div class="copy">
+            <h6> &copy; 2020 web agency </h6>
+
+        </div>
+
+
+    </footer>
+
+
 </body>
 
 </html>
