DERNIER COMMIT POUR LE TROISIEME JOUR
commit journaliale

--- a/index1.html
+++ b/index1.html
@@ -12,10 +12,10 @@
 
 <body>
 
-
+    <!----------------------------------- start header section ------------------------------->
 
     <header class="hhead">
-        <div class="fixe">
+        <div class="hfixe">
             <img src="/Images/Logo2.png" alt="logo" class="hlogo">
             <nav>
                 <ul class="hmenu">
@@ -42,26 +42,33 @@
         </div>
         <div class="hsepar">
             <h1>On vous rappelle sous 24h</h1>
-            <p class="para">Digitalisation en main</p>
+            <p class="hpara">Digitalisation en main</p>
             <button class="hbtn"> SUBSCRIBE</button>
         </div>
     </header>
 
+    <!----------------------------------- end  header section ------------------------------->
 
+    <!----------------------------------- start section 1 ------------------------------->
 
     <section1 class="hsec1">
         <div class="hgrid">
             <div class="hleft"></div>
             <div class="hright">
                 <h2 class="htitle3">ABOUT <span>US</span></h2>
-                <p class="para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                <p class="hpara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
             </div>
         </div>
     </section1>
+
+    <!----------------------------------- end section 1------------------------------->
+
+    <!----------------------------------- START  second section ------------------------------->
+
     <section2 class="hsec2">
         <div class="hcont">
             <h2 class="htitle4"><span>NOS</span> SERVICES</h2>
-            <p class="para"> NOTRE EXPERTISE A VOTRE SERVICES</p>
+            <p class="hpara"> NOTRE EXPERTISE A VOTRE SERVICES</p>
 
             <div class="hgrid" id="hgrid">
                 <div class="hone">
@@ -85,7 +92,9 @@
         </div>
     </section2>
 
+    <!----------------------------------- end SECOND section ------------------------------->
 
+    <!----------------------------------- start section 3------------------------------->
 
     <section3 class="hsec3">
         <div class="hfather">
@@ -106,7 +115,9 @@
         </div>
     </section3>
 
+    <!----------------------------------- end section 3------------------------------->
 
+    <!----------------------------------- start section 4------------------------------->
 
     <section4 class="hsec4">
         <div class="hgrid3">
@@ -115,23 +126,27 @@
         </div>
     </section4>
 
+    <!----------------------------------- end section 4------------------------------->
 
+    <!----------------------------------- START section 5------------------------------->
 
     <section5 class="hsec5">
         <div class="hcont">
-            <p class="para">QUELQUES <span>REALISATIONS</span> DE L’AGENCE</p>
-            <div class="abg"></div>
-            <div class="slider">
-                <div class="slides">
-                    <div class="slide"><img src="/Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide"></div>
-                    <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg" alt="slide"></div>
-                    <div class="slide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg" alt="slide"></div>
+            <p class="hpara">QUELQUES <span>REALISATIONS</span> DE L’AGENCE</p>
+            <div class="habg"></div>
+            <div class="hslider">
+                <div class="hslides">
+                    <div class="hslide"><img src="/Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide"></div>
+                    <div class="hslide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg" alt="slide"></div>
+                    <div class="hslide"><img src="/Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg" alt="slide"></div>
                 </div>
             </div>
         </div>
     </section5>
 
+    <!----------------------------------- end section 5------------------------------->
 
+    <!----------------------------------- start FOOTERsection ------------------------------->
 
     <footer>
 
@@ -186,6 +201,7 @@
 
     </footer>
 
+    <!----------------------------------- THE END ------------------------------->
 
 </body>
 
