ajouter un nouveaux section

--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -15,9 +15,9 @@
         <h1>TESTIMONAILE</h1>
         <div class="testimonaile">
 
-            <div class="jone com">
+            <div class="jone">
                 <div>
-                    <img src="img/uuu.jpg" alt="">
+                    <img src="img/images (1).jfif" alt="">
                 </div>
                 <div class="personne">
                     <h2>desinger</h2>
@@ -35,7 +35,7 @@
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="social com">
+                <div class="social">
 
                     <i class="fab fa-facebook-square"></i>
                     <i class="fab fa-whatsapp-square"></i>
@@ -43,9 +43,13 @@
 
                 </div>
             </div>
+
+            <!-- hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh -->
+
+
             <div class="steve">
                 <div>
-                    <img src="img/uuu.jpg" alt="">
+                    <img src="img/team-member-lg.jpg" alt="">
                 </div>
                 <div class="personne">
                     <h2>desinger</h2>
@@ -56,7 +60,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
                     </p>
                 </div>
-                <div class="stars com">
+                <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -71,9 +75,14 @@
 
                 </div>
             </div>
+
+
+            <!-- kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk -->
+
+
             <div class="ball">
                 <div>
-                    <img src="img/uuu.jpg" alt="">
+                    <img src="img/howard-yu-thumbnail.jpg" alt="">
                 </div>
                 <div class="personne">
                     <h2>desinger</h2>
@@ -101,6 +110,126 @@
             </div>
         </div>
     </section>
+
+
+    <!-- -------------------------------------------------------------PRICING------------------------------------------------- -->
+    <section class="section2">
+        <h1>PRICING:</h1>
+        <div class="pricing">
+
+            <div class="standard">
+                <div>
+                    <h2>Standard</h2>
+                </div>
+                <div class="prix">
+                    <h3>A Pratir De 700Dhs</h3>
+                </div>
+                <div class="container">
+                    <div>
+                        <p>100% Responsive</p>
+                    </div>
+                    <div>
+                        <p>Site Trés rapide</p>
+                    </div>
+                    <div>
+                        <p>Wordpress CMS</p>
+                    </div>
+                    <div>
+                        <p>Intégration GMap e Web Master</p>
+                    </div>
+                    <div>
+                        <p>Référencement Basique</p>
+                    </div>
+                    <div>
+                        <p>Publication sur demande</p>
+                    </div>
+                    <div>
+                        <p>Total Des Pages: 5</p>
+                    </div>
+                </div>
+                <div>
+                    <button>Demande un devis</button>
+                </div>
+            </div>
+
+            <!-- lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll -->
+
+            <div class="professionnel">
+                <div>
+                    <h2>Professionnel</h2>
+                </div>
+                <div class="prix">
+                    <h3>A Pratir De 2000Dhs</h3>
+                </div>
+                <div class="container">
+                    <div>
+                        <p>100% Responsive</p>
+                    </div>
+                    <div>
+                        <p>Site Trés rapide</p>
+                    </div>
+                    <div>
+                        <p>Wordpress CMS</p>
+                    </div>
+                    <div>
+                        <p>Intégration GMap e Web Master</p>
+                    </div>
+                    <div>
+                        <p>Référencement Optimisé</p>
+                    </div>
+                    <div>
+                        <p>Publication grtuite</p>
+                    </div>
+                    <div>
+                        <p>Total Des Pages: 10</p>
+                    </div>
+                    <div>
+                        <button>Demande un devis</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
+
+
+            <div class="demande">
+                <div>
+                    <h2>Sur Demande</h2>
+                </div>
+                <div class="prix">
+                    <h3>A Pratir De 3300Dhs</h3>
+                </div>
+                <div class="container">
+                    <div>
+                        <p>100% Responsive</p>
+                    </div>
+                    <div>
+                        <p>Site Trés rapide</p>
+                    </div>
+                    <div>
+                        <p>Scripte Sur demande</p>
+                    </div>
+                    <div>
+                        <p>Intégration GMap e Web Master</p>
+                    </div>
+                    <div>
+                        <p>Référencement Optimisé</p>
+                    </div>
+                    <div>
+                        <p>Publication Gratuite</p>
+                    </div>
+                    <div>
+                        <p>Total Des Pages: 10</p>
+                    </div>
+                    <div>
+                        <button>Demande un devis</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
