STYLISATION ET FINALISATION DU VERSION TABLET
J' ai fini aussi la version tablet de ma page .

--- a/index1.html
+++ b/index1.html
@@ -40,11 +40,11 @@
                 </ul>
             </nav>
         </div>
-        <div class="hsepar">
-            <h1>On vous rappelle sous 24h</h1>
-            <p class="hpara">Digitalisation en main</p>
-            <button class="hbtn"> SUBSCRIBE</button>
-        </div>
+
+        <h1>On vous rappelle sous 24h</h1>
+        <p class="hpara">Digitalisation en main</p>
+        <div class="halone"> <button class="hbtn"> SUBSCRIBE</button></div>
+
     </header>
 
     <!----------------------------------- end  header section ------------------------------->
@@ -106,7 +106,7 @@
                 <button class="hbtn">Faison connaisance</button>
                 <div class="child2">
                     <div class="SEPAR">
-                        <span><i class="fas fa-award" ></i></span>
+                        <span><i class="fas fa-award fa-2x" ></i></span>
                         <h1>Hey</h1>
                         <p>This is an informative card that will tell you something that's... well, important!</p>
                     </div>
