end of mobile version
I can do better but done is better then perfect

--- a/team and client/index.html
+++ b/team and client/index.html
@@ -46,7 +46,7 @@
 
 
         <div class="container">
-            <div class="team">
+            <div class="team team1">
                 <img src="images/team_member1.jpg" alt="team_member1">
                 <h2>Mark Gale</h2>
                 <h3>Project Manager</h3>
@@ -63,7 +63,7 @@
                 </ul>
             </div>
 
-            <div class="team">
+            <div class="team team2">
 
                 <img src="images/h1-team-member-2.jpg" alt="h1-team-member-2">
                 <h2>Teegan Lincoln</h2>
@@ -212,10 +212,11 @@
             </div>
         </div>
 
+
         <div class="footer-content ">
             <div class=" contact flaot">
-                <h4>contact@webagency.com.ma</h4>
-                <h4>+121 34 67 83 79</h4>
+                <h4 class="cnt">contact@webagency.com.ma</h4>
+                <h4 class="num">+121 34 67 83 79</h4>
             </div>
 
 
@@ -235,9 +236,9 @@
                     <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
-
-
         </div>
+
+
 
         <div class="copy">
             <h6> &copy; 2020 web agency </h6>
