--- a/team and client/index.html
+++ b/team and client/index.html
@@ -143,7 +143,7 @@
 
             <div class="client">
                 <i class="fab fa-paypal"></i>
-            </div>
+            </div>-
 
             <div class="client">
                 <i class="fab fa-apple"></i>
